Update to 1.19